--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,11 @@
 :root {
+  --color-white: #ffffff;
   --color-primary: #f3f3f3;
   --color-secondary: #312f2f;
   --color-green: #046E1B;
   --color-blue: #75B8EE;
   --color-yellow: #F79F1A;
+  --color-gray: #7F7D7D;
 }
 
 .container {
@@ -15,18 +17,23 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: sans-serif;
-}
-a {
-  text-decoration: none;
-  color: inherit;
+  font-family: 'Inter', sans-serif;
 }
 body {
   padding: 0 10px;
   background: var(--color-primary);
 }
+img {
+  max-width: 100%;
+}
+a {
+  text-decoration: none;
+  color: inherit;
+  display: inline-block;
+}
 
-header {
+.header {
+  font-weight: 500;
   font-size: 1.2rem;
   padding: 1rem 0;
   display: flex;
@@ -50,6 +57,7 @@ header {
 
 .search-login {
   padding: .5rem;
+  cursor: pointer;
 }
 
 
@@ -57,17 +65,20 @@ header {
 
 .main {
   display: flex;
-  padding-top: 3rem;
+  gap: 1rem;
+  height: calc(100vh - 76px);
+  padding-top: 10rem;
 }
 .main .left-content h1 {
   font-size: 4rem;
-  font-weight: bold;
+  font-weight: 700;
   padding-top: 3rem;
   line-height: 5rem;
   padding-bottom: 2.31rem;
 }
 .main .left-content p {
-  color: #7F7D7D;
+  font-weight: 300;
+  color: var(--color-gray);
   font-size: 1rem;
   line-height: 1.5rem;
   padding-bottom: 3.81rem;
@@ -83,4 +94,155 @@ header {
   padding: 1.88rem 2.5rem;
   display: inline-block;
   border-radius: 1.25rem;
+  font-weight: 600;
+}
+.right-content img {
+  max-width: 634px;
+}
+
+
+
+.receitas {
+  padding-bottom: 10.5rem;
+}
+.receitas header {
+  padding-top: 6.25rem;
+  padding-bottom: 4.38rem;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.receitas header .left-content h1 {
+  font-size: 2.875rem;
+  font-weight: 600;
+  letter-spacing: -0.04888rem;
+}
+.receitas header .left-content p {
+  font-size: 1.5rem;
+  font-weight: 300;
+  color: var(--color-gray);
+}
+.receitas header a {
+  background: var(--color-yellow);
+  padding: 1.25rem 2.5rem;
+  border-radius: 1.25rem;
+  color: var(--color-primary);
+}
+.receitas-container {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 3.56rem;
+}
+.receita-card {
+  background: var(--color-white);
+  border-radius: 1.25rem;
+  box-shadow: 0px 4px 30px 0px rgba(0, 0, 0, 0.05);
+}
+.receita-card > img {
+  border-radius: 1.25rem 1.25rem 0 0;
+}
+.receita-desc {
+  display: flex;
+  justify-content: center;
+  gap: 1.88rem;
+  position: relative;
+  margin-top: -2rem;
+  background: rgba(255, 255, 255, 0.60);
+  padding: .5rem;
+  color: var(--color-green);
+  font-weight: 500;
+}
+ .receita-title {
+  padding: 1rem 1rem 2rem;
+}
+.receita-title h1 {
+  font-size: 2rem;
+  font-weight: 600;
+  padding-bottom: 0.94rem;
+}
+.receita-title a {
+  color: var(--color-yellow);
+}
+.receita-title a::after {
+  display: block;
+  content: "";
+  width: 100%;
+  height: 1px;
+  background: var(--color-yellow);
+}
+
+
+
+
+.sobre {
+  display: flex;
+  background: url('../img/saladaAbacaxi.png') no-repeat;
+  gap: 3rem;
+  border-radius: 1rem;
+}
+.sobre .left-content,
+.sobre .right-content {
+  flex: 1;
+}
+.sobre .left-content {
+  display: flex;
+}
+.sobre .left-content .content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-end;
+  padding-bottom: 4rem;
+  padding-left: 3rem;
+}
+.sobre .left-content .content .title {
+  background: var(--color-white);
+  padding: 1rem;
+  border-radius: 0.6rem;
+  color: var(--color-green);
+}
+.sobre .right-content {
+  padding: 5.31rem 8.25rem 7.12rem 0;
+}
+.sobre .right-content .content {
+  background: var(--color-white);
+  max-width: 36rem;
+  padding: 2rem;
+  border-radius: 1.25rem;
+}
+.sobre .right-content .content h2 {
+  font-size: 2.875rem;
+  font-weight: 600;
+  letter-spacing: -0.04888rem;
+  padding-bottom: 1rem;
+  position: relative;
+}
+.sobre .right-content .content h2:after {
+  content: '';
+  position: absolute;
+  display: inline-block;
+  background: url('../img/pao.png') no-repeat;
+  width: 7.5rem;
+  height: 7.5rem;
+  top: -3rem;
+  right: 1rem;
+}
+.sobre .right-content .content p {
+  font-size: 1.25rem;
+  font-weight: 400;
+  line-height: 1.875rem;
+  padding-bottom: 2rem;
+  color: var(--color-secondary);
+}
+.sobre .right-content .content a {
+  background: var(--color-yellow);
+  padding: 0.875rem 3rem;
+  border-radius: 1.25rem;
+  color: var(--color-primary);
+}
+
+
+
+.comunidade {
+  padding-top: 8rem;
 }
