--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -347,7 +347,7 @@ a {
   background: var(--color-green);
   display: flex;
   border-radius: 1rem;
-  margin-bottom: 5rem;
+  margin-bottom: 10rem;
 }
 
 .app-download .content h1 {
@@ -369,4 +369,47 @@ a {
   padding: 1rem 2rem;
   border-radius: 1rem;
   gap: 10px;
+}
+
+
+.footer {
+  display: flex;
+  justify-content: space-around;
+  padding-bottom: 5rem;
+}
+.footer .left-content {
+  display: flex;
+  gap: 4rem;
+}
+.footer .left-content h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-bottom: 1.5rem;
+}
+.footer .left-content a {
+  display: block;
+  margin-bottom: 0.5rem;
+}
+.footer .right-content h1 {
+  font-size: 1.5rem;
+  font-weight: 600;
+  padding-bottom: 3rem;
+}
+.footer .right-content form input {
+  padding: .6rem 1rem;
+  width: 100%;
+  border: none;
+  border-bottom: 2px solid var(--color-yellow);
+  background-color: transparent;
+  outline: none;
+}
+
+.footer .right-content form button {
+  background: var(--color-yellow);
+  border-radius: 1.25rem;
+  color: var(--color-primary);
+  border: none;
+  padding: 1.25rem 2.5rem;
+  margin-top: 1rem;
+  cursor: pointer;
 }
