arrumando display botão menu mobile

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -105,6 +105,9 @@ a {
   .menu-ul {
     flex-direction: column;
   }
+  .mobile-menu {
+    display: block;
+  }
   .mobile-menu.ativo {
     position: fixed;
   }
