--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -91,7 +91,7 @@ a {
   display: none;
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .menu-nav {
     position: fixed;
     right: -100%;
@@ -136,6 +136,10 @@ a {
   gap: 1rem;
   padding-top: 11rem;
 }
+.main .left-content,
+.main.right-content {
+  flex: 1;
+}
 
 .main .left-content h1 {
   font-size: 4rem;
@@ -171,7 +175,7 @@ a {
 }
 
 .right-content img {
-  max-width: 634px;
+  max-width: 100%;
 }
 
 @media (max-width: 768px) {
@@ -182,7 +186,7 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .main .left-content {
     display: flex;
     flex-direction: column;
@@ -200,7 +204,7 @@ a {
   }
 
   .main .left-content a {
-    padding: 1.2rem 1.5rem;
+    padding: 1.25rem 2.5rem;
   }
 
   .main .right-content {
@@ -310,7 +314,7 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .receitas header {
     flex-direction: column;
     text-align: left;
@@ -424,7 +428,7 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .sobre .left-content .content {
     padding: 10px;
   }
@@ -529,7 +533,7 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .comunidade {
     padding-top: 4rem;
   }
@@ -616,7 +620,7 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .app-download .content .link-app {
     flex-direction: column;
   }
@@ -694,8 +698,78 @@ a {
   }
 }
 
-@media (max-width: 375px) {
+@media (max-width: 425px) {
   .footer .right-content h1 {
     font-size: 1.7rem;
   }
 }
+
+
+.modal-login {
+  display: none;
+  position: fixed;
+  align-items: center;
+  justify-content: center;
+  inset: 0;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.modal-login.active {
+  display: flex;
+}
+
+.modal-login-content {
+  background: var(--color-yellow);
+  padding: 3rem;
+  border-radius: .5rem;
+  position: relative;
+}
+.modal-login-header button {
+  position: absolute;
+  right: -1rem;
+  top: -1rem;
+  padding: .2rem .8rem;
+  border-radius: 50%;
+  border: 3px solid var(--color-white);
+  background: var(--color-green);
+  cursor: pointer;
+  font-size: 2rem;
+  color: var(--color-yellow);
+}
+.modal-login-header h1 {
+  font-size: 2rem;
+  padding-bottom: .6rem;
+  color: var(--color-secondary);
+}
+
+.modal-login-content form label,
+.modal-login-content form button {
+  display: block;
+}
+.modal-login-content form label {
+  padding-top: .8rem;
+  padding-bottom: .3rem;
+  font-size: 1.2rem;
+}
+.modal-login-content form input {
+  width: 400px;
+  padding: .7rem 1rem;
+  border-radius: .2rem;
+  outline: none;
+  border: none;
+}
+.modal-login-content form button {
+  margin-top: 1.5rem;
+  padding: .7rem 2rem;
+  border-radius: .5rem;
+  border: none;
+  background: var(--color-blue);
+  font-size: 1.2rem;
+  cursor: pointer;
+  transition: all 0.3s ease;
+}
+
+.modal-login-content form button:hover {
+  filter: brightness(80%);
+}
+
