--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -195,7 +195,7 @@ a {
   .main {
     flex-direction: column;
     padding-top: 0;
-    gap: 4rem;
+    gap: 3rem;
   }
 }
 
@@ -207,18 +207,20 @@ a {
   }
 
   .main .left-content h1 {
-    font-size: 2.5rem;
-    line-height: 3rem;
+    font-size: 2.2rem;
+    line-height: 2.5rem;
+    padding-bottom: 1.5rem;
   }
 
   .main .left-content p {
     font-size: 1.2rem;
-    padding-bottom: 2rem;
+    padding-bottom: 1.5rem;
   }
 
   .main .left-content a {
-    padding: 1.25rem 2.5rem;
-  }
+    padding: 1rem 1.5rem;
+    font-size: 1rem;
+}
 
   .main .right-content {
     display: flex;
@@ -327,6 +329,7 @@ a {
   .receitas header a {
     width: 170px;
     text-align: center;
+    padding: 1rem 1.5rem;
   }
 
   .receitas-container {
@@ -457,7 +460,9 @@ a {
   .sobre .right-content {
     padding: 10px;
   }
-
+  .sobre .right-content .content a {
+    padding: 1rem 1.5rem;
+  }
   .sobre .right-content .content h2:after {
     top: -4rem;
     right: -2rem;
